slider with hash

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         </div>
         <div class="banner__slider">
           <div class="banner__wrapper owl-carousel">
-            <img src="img/chair.png" srcset="img/chair@2x.png 900w, img/chair@3x.png 1200w" alt="">
-            <img src="img/chair.png" srcset="img/chair@2x.png 900w, img/chair@3x.png 1200w" alt="">
+            <img src="img/chair_web.png" alt="">
+            <img src="img/chair_web.png" alt="">
           </div>
         </div>
       </div>
@@ -306,7 +306,7 @@
           О компании
         </div>
         <div class="about__info">
-          <img src="img/info@2x.png" alt="">
+          <img src="img/info.jpeg" alt="">
         </div>
         <ul class="about__list">
           <li class="about__item">
@@ -438,7 +438,7 @@
           Собственное производство
         </div>
         <div class="factory__photo">
-          <img src="img/bg-photo.jpg" srcset="img/bg-photo@2x.jpg 900w, img/bg-photo@3x.jpg 1200w" alt="">
+          <img src="img/bg-photo.jpg" alt="">
         </div>
         <div class="factory__info">
           <div class="factory__title">
@@ -473,18 +473,18 @@
         </div>
       </div>
       <div class="news__time">
-        <div class="news__month"><a href="#">Май</a></div>
-        <div class="news__month news__month--active"><a href="#">Июнь</a></div>
-        <div class="news__month"><a href="#">Июль</a></div>
-        <div class="news__month"><a href="#">Август</a></div>
+        <div class="news__month" data-hash="1"><a href="#">Май</a></div>
+        <div class="news__month news__month--active" data-hash="2"><a href="#">Июнь</a></div>
+        <div class="news__month" data-hash="3"><a href="#">Июль</a></div>
+        <div class="news__month" data-hash="4"><a href="#">Август</a></div>
       </div>
       <div class="news__container">
         <div class="container">
           <div class="news__outer">
             <div class="news__scroll owl-carousel">
-              <a href="" class="news__item">
+              <a href="" class="news__item" data-hash="1">
                 <div class="news__img">
-                  <img src="img/new1.jpg" srcset="img/new1@2x.jpg 900w, img/new1@3x.jpg 1200w" alt="">
+                  <img src="img/new1.jpg" alt="">
                 </div>
                 <div class="news__date">
                   7 MAY 2015
@@ -497,9 +497,9 @@
                   for the weekend… start with waffles
                 </div>
               </a>
-              <a href="" class="news__item">
+              <a href="" class="news__item" data-hash="2">
                 <div class="news__img">
-                  <img src="img/new2.jpg" srcset="img/new2@2x.jpg 900w, img/new2@3x.jpg 1200w" alt="">
+                  <img src="img/new2.jpg" alt="">
                 </div>
                 <div class="news__date">
                   7 MAY 2015
@@ -512,9 +512,9 @@
                   for the weekend… start with waffles
                 </div>
               </a>
-              <a href="" class="news__item">
+              <a href="" class="news__item" data-hash="3">
                 <div class="news__img">
-                  <img src="img/new1.jpg" srcset="img/new1@2x.jpg 900w, img/new1@3x.jpg 1200w" alt="">
+                  <img src="img/new1.jpg" alt="">
                 </div>
                 <div class="news__date">
                   7 JUN 2015
@@ -527,9 +527,9 @@
                   for the weekend… start with waffles
                 </div>
               </a>
-              <a href="" class="news__item">
+              <a href="" class="news__item" data-hash="4">
                 <div class="news__img">
-                  <img src="img/new2.jpg" srcset="img/new2@2x.jpg 900w, img/new2@3x.jpg 1200w" alt="">
+                  <img src="img/new2.jpg" alt="">
                 </div>
                 <div class="news__date">
                   7 JUN 2015
@@ -542,9 +542,9 @@
                   for the weekend… start with waffles
                 </div>
               </a>
-              <a href="" class="news__item">
+              <a href="" class="news__item" data-hash="5">
                 <div class="news__img">
-                  <img src="img/new1.jpg" srcset="img/new1@2x.jpg 900w, img/new1@3x.jpg 1200w" alt="">
+                  <img src="img/new1.jpg" alt="">
                 </div>
                 <div class="news__date">
                   7 JUL 2015
@@ -557,9 +557,9 @@
                   for the weekend… start with waffles
                 </div>
               </a>
-              <a href="" class="news__item">
+              <a href="" class="news__item" data-hash="6">
                 <div class="news__img">
-                  <img src="img/new2.jpg" srcset="img/new2@2x.jpg 900w, img/new2@3x.jpg 1200w" alt="">
+                  <img src="img/new2.jpg" alt="">
                 </div>
                 <div class="news__date">
                   7 JUL 2015
@@ -572,9 +572,9 @@
                   for the weekend… start with waffles
                 </div>
               </a>
-              <a href="" class="news__item">
+              <a href="" class="news__item" data-hash="7">
                 <div class="news__img">
-                  <img src="img/new1.jpg" srcset="img/new1@2x.jpg 900w, img/new1@3x.jpg 1200w" alt="">
+                  <img src="img/new1.jpg" alt="">
                 </div>
                 <div class="news__date">
                   7 AUG 2015
@@ -587,9 +587,9 @@
                   for the weekend… start with waffles
                 </div>
               </a>
-              <a href="" class="news__item">
+              <a href="" class="news__item" data-hash="8">
                 <div class="news__img">
-                  <img src="img/new2.jpg" srcset="img/new2@2x.jpg 900w, img/new2@3x.jpg 1200w" alt="">
+                  <img src="img/new2.jpg" alt="">
                 </div>
                 <div class="news__date">
                   7 AUG 2015
