--- a/one-mebel.html
+++ b/one-mebel.html
@@ -223,7 +223,7 @@
                 Бесплатное обучение при покупке
               </div>
             </div>
-            <div class="mainbtn mainbtn--blue">
+            <div class="mainbtn mainbtn--blue" data-action="get-price" data-product="Универсальная массажная кушетка">
               <a href="#">Уточнить цену</a>
             </div>
           </div>
