--- a/news.html
+++ b/news.html
@@ -7,34 +7,23 @@
   <meta name="format-detection" content="telephone=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>ICG Group</title>
-
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link href="css/datepicker.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/main.css">
-
 </head>
 
 <body>
-
   <div class="wrapper newslist-page">
-
     <header class="header">
-
       <div class="container">
-
         <div class="header__menu">
           <div class="header__burger">
-
           </div>
-
           <div class="header__popup">
-
             <div class="header__wrapper">
               <a href="#" class="header__close">
-
               </a>
-
               <nav class="header__nav">
                 <ul class="header__list">
                   <li class="header__item">
@@ -63,12 +52,10 @@
                   </li>
                 </ul>
               </nav>
-
               <div class="header__contacts">
                 <div class="header__text">
                   ICG В СОЦИАЛЬНЫХ СЕТЯХ
                 </div>
-
                 <ul class="header__social-list">
                   <li class="header__social header__social--vk">
                     <a href="#"></a>
@@ -81,9 +68,7 @@
                   </li>
                 </ul>
               </div>
-
             </div>
-
           </div>
         </div>
         <div class="header__logo">
@@ -113,16 +98,19 @@
             </li>
           </ul>
         </div>
-
         <div class="header__search">
           <div class="search__icon">
-
+          </div>
+          <div class="search__popup">
+            <form action="" method="POST" class="search__form">
+              <input type="text" placeholder="Поиск" class="search__field" id="search__field">
+              <input type="submit" class="search__submit" value="">
+            </form>
           </div>
         </div>
       </div>
-
     </header>
-
+    <!-- brands -->
     <section class="brends">
       <div class="container">
         <ul class="brends__list owl-carousel">
@@ -153,77 +141,67 @@
         </ul>
       </div>
     </section>
-
-    <section class="news__main">
-      <nav class="breadcrumbs">
-        <div class="container">
-          <a href="index.html" class="breadcrumbs__link">Главная</a>
-          <a href="news.html" class="breadcrumbs__link">Новости</a>
-        </div>
-      </nav>
-
-    </section>
-
+    <!-- breadcrumbs -->
+    <div class="breadcrumbs">
+      <div class="container">
+        <ol itemscope itemtype="http://schema.org/BreadcrumbList">
+          <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+            <a itemprop="item" href="#">
+              <span itemprop="name">главная</span></a>
+            <meta itemprop="position" content="1" />
+          </li>
+          <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+            <a itemprop="item" href="#">
+              <span itemprop="name">новости</span></a>
+            <meta itemprop="position" content="2" />
+          </li>
+        </ol>
+      </div>
+    </div>
     <section class="banners courses-page">
       <div class="container">
         <div class="offers__item">
           <div class="offers__photo">
             <img src="img/courses1.jpg" srcset="img/courses1@2x.jpg 900w, img/courses1@3x.jpg 1200w" alt="">
           </div>
-
           <div class="offers__desc">
             <div class="offers__title">
               Требуются модели
             </div>
-
             <div class="offers__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi.
             </div>
           </div>
-
         </div>
-
         <div class="offers__item">
           <div class="offers__photo">
             <img src="img/courses2.jpg" srcset="img/courses2@2x.jpg 900w, img/courses2@3x.jpg 1200w" alt="">
           </div>
-
           <div class="offers__desc">
             <div class="offers__title">
               Ближайшие семинары
-
             </div>
-
             <div class="offers__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi.
             </div>
           </div>
-
         </div>
       </div>
     </section>
-
     <section class="news__section">
-
       <div class="container">
         <div class="main-title">
           Новости
         </div>
       </div>
-
       <div class="news__time">
-
         <div class="container">
           <div class="news__month news__month--active"><a href="#">Обучение</a></div>
           <div class="news__month"><a href="#">Оборудование</a></div>
           <div class="news__month"><a href="#">Косметика</a></div>
-
         </div>
-
       </div>
-
       <div class="news__tags">
-
         <div class="container">
           <a href="#" class="news__tag">2018</a>
           <a href="#" class="news__tag">Семинар</a>
@@ -232,26 +210,19 @@
           <a href="#" class="news__tag">Профессиональная косметика</a>
           <a href="#" class="news__tag">Косметика для лица</a>
         </div>
-
-
       </div>
-
       <div class="news__container">
         <div class="container">
-
-
-
           <div class="news__outer">
-
             <div class="news__scroll owl-carousel" data-slider="events">
-
               <article>
                 <a href="">
                   <img src="img/new1.jpg" srcset="img/new1@2x.jpg 900w, img/new1@3x.jpg 1200w" alt="">
                 </a>
                 <date class="news__date">7 MAY 2015</date>
                 <a class="news__title" href="">Weekend plans</a>
-                <p class="news__text">It’s nearly friday and we’re already planning for the weekend… start with waffles</p>
+                <p class="news__text">It’s nearly friday and we’re already planning for the weekend… start with waffles
+                </p>
               </article>
               <article>
                 <a href="">
@@ -259,42 +230,31 @@
                 </a>
                 <date class="news__date">7 MAY 2015</date>
                 <a class="news__title" href="">Weekend plans</a>
-                <p class="news__text">It’s nearly friday and we’re already planning for the weekend… start with waffles</p>
+                <p class="news__text">It’s nearly friday and we’re already planning for the weekend… start with waffles
+                </p>
               </article>
-
             </div>
           </div>
         </div>
-
       </div>
-
       <div class="news__btn">
         <div class="mainbtn">
           <a href="news.html">Все события</a>
         </div>
       </div>
-
     </section>
-
-
     <section class="news__popular">
-
       <div class="container">
         <div class="main-title">
           Популярные новости
         </div>
       </div>
-
-
       <div class="news__time">
-
         <div class="news__month news__month--active"><a href="#">Обучение</a></div>
         <div class="news__month"><a href="#">Оборудование</a></div>
         <div class="news__month"><a href="#">Партнеры</a></div>
-
       </div>
       <div class="container">
-
         <div class="news__tags">
           <a href="#" class="news__tag">2018</a>
           <a href="#" class="news__tag">Семинар</a>
@@ -303,7 +263,6 @@
           <a href="#" class="news__tag">Профессиональная косметика</a>
           <a href="#" class="news__tag">Косметика для лица</a>
         </div>
-
         <div class="news__outer">
           <div class="news__scroll owl-carousel" data-slider="popular-news">
             <div class="news__one">
@@ -392,69 +351,101 @@
             </div>
           </div>
         </div>
-
     </section>
-
+    <!-- contacts form -->
     <section class="contacts">
-
       <div class="container">
         <div class="main-title">
           Свяжитесь с нами
         </div>
-
-        <div class="contacts__form">
+        <form method="post" action="" enctype="multipart/form-data" class="contacts__form" id="contacts">
           <label>
             <span class="contacts__text">Оставьте ваш телефон чтобы мы перезвонили</span>
-            <input type="text"
-              class="contacts__field contacts__field--half contacts__field--phone contacts__field--phonemask"
+            <input type="tel"
+              class="contacts__field contacts__field--half contacts__field--phone contacts__field--phonemask phone-1"
               placeholder="8 900 123-45-56">
           </label>
-
           <div class="contacts__text contacts__text--icon">Или пишите нам, наши менеджеры свяжутся с вами в ближайшее
             время:</div>
-
           <input type="text" class="contacts__field contacts__field--half" placeholder="Имя">
           <input type="text" class="contacts__field contacts__field--half" placeholder="Ваш город">
-          <input type="text" class="contacts__field contacts__field--half contacts__field--phonemask"
-            placeholder="Телефон">
+          <input type="tel" class="contacts__field contacts__field--half contacts__field--phonemask phone-2"
+            placeholder="Телефон" required>
           <input type="text" class="contacts__field contacts__field--half" placeholder="Направление">
-          <input type="email" class="contacts__field contacts__field--half" placeholder="Email">
+          <input type="email" class="contacts__field contacts__field--half" placeholder="Email" required>
           <input type="text" class="contacts__field contacts__field--half" placeholder="Бренд">
-          <textarea name="" id="" cols="30" rows="1" class="contacts__field contacts__field--big"
+          <textarea name="" id="" cols="30" rows="3" class="contacts__field contacts__field--big"
             placeholder="Сообщение"></textarea>
-
           <div class="contacts__checking">
             <div class="contacts__personal">
               <label for="personal-checked" class="personal__checked">Согласие на обработку персональных данных</label>
               <input type="checkbox" id="personal-checked" name="personal-personal-checked" class="form__checked"
-                checked>
+                checked required>
               <span class="form__checkmark form__checkmark--checked">
               </span>
             </div>
-            <input type="submit" class="mainbtn contacts__btn" value="Отправить заявку">
+            <input type="submit" for="contacts" class="mainbtn mainbtn--blue contacts__btn" value="Отправить заявку">
           </div>
-
-
+        </form>
+      </div>
+    </section>
+  </div>
+  <!-- footer -->
+  <footer class="footer">
+    <div class="flex-container">
+      <div class="icg-copy">
+        ICG GROUP
+      </div>
+      <div class="flex-row">
+        <div class="flex-col">
+          <div class="footer__menu menu--main">
+            <strong>Меню</strong>
+            <ul>
+              <li><a href="">о компании</a></li>
+              <li><a href="">учебный центр icg</a></li>
+              <li><a href="">icg мебель</a></li>
+              <li><a href="">новости</a></li>
+              <li><a href="">акции</a></li>
+              <li><a href="">сервис</a></li>
+              <li><a href="">написать нам</a></li>
+              <li><a href="">в магазин icg</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex-col flex--double">
+          <div class="footer__menu menu--brands">
+            <strong>Бренды</strong>
+            <ul>
+              <li><a href="">IONTO Comed</a></li>
+              <li><a href="">Suda</a></li>
+              <li><a href="">Creativellooda</a></li>
+              <li><a href="">MyStyle</a></li>
+              <li><a href="">Bernand Cassiere</a></li>
+              <li><a href="">Profillers</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex-col">
+          <div class="footer__menu menu--social">
+            <strong>icg в&nbsp;социальных&nbsp;сетях</strong>
+            <ul class="header__social-list">
+              <li class="header__social header__social--vk">
+                <a href="#"></a>
+              </li>
+              <li class="header__social header__social--fb">
+                <a href="#"></a>
+              </li>
+              <li class="header__social header__social--inst">
+                <a href="#"></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-
-    </section>
-
-
-  </div>
-
-  <footer class="footer">
-
-    ICG Group 2019
-
+    </div>
   </footer>
-
-  <script src="js/jquery-3.4.1.js"></script>
-  <script src="js/jquery.maskedinput.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
   <!-- <script src="js/newslist.js"></script> -->
-
 </body>
 
 </html>
