--- a/service.html
+++ b/service.html
@@ -509,7 +509,8 @@
               <input type="text" class="individual__input" placeholder="Имя" required>
             </div>
             <div class="request__field">
-              <input type="tel" class="individual__input contac" pattern="^((\+7|7|8)+([0-9]){10})$" placeholder="+7 999 999 99 99" required>
+              <input type="tel" class="individual__input contac" pattern="^((\+7|7|8)+([0-9]){10})$"
+                placeholder="+7 999 999 99 99" required>
             </div>
             <div class="request__field">
               <input type="email" class="individual__input" placeholder="E-mail" required>
@@ -533,7 +534,9 @@
         <div class="service__addresses-list owl-carousel">
           <div class="service__addresses-item">
             <!-- <div class="service__addresses-map" id="map1"></div> -->
-            <img data-coords="30.347543,59.946324" data-id="1" src="https://static-maps.yandex.ru/1.x/?ll=30.347543,59.946324&size=450,450&z=16&l=map&pt=30.347543,59.946324,pmwtm1" alt="">
+            <img data-coords="30.347543,59.946324" data-id="1"
+              src="https://static-maps.yandex.ru/1.x/?ll=30.347543,59.946324&size=450,450&z=16&l=map&pt=30.347543,59.946324,pmwtm1"
+              alt="">
             <div class="service__addresses-city">
               Санкт-Петербург
             </div>
@@ -549,8 +552,10 @@
           </div>
           <div class="service__addresses-item">
             <!-- <div class="service__addresses-map" id="map2"></div> -->
-            <img data-coords="30.347543,59.946324" data-id="2" src="https://static-maps.yandex.ru/1.x/?ll=30.347543,59.946324&size=450,450&z=16&l=map&pt=30.347543,59.946324,pmwtm1" alt="">
-            
+            <img data-coords="30.347543,59.946324" data-id="2"
+              src="https://static-maps.yandex.ru/1.x/?ll=30.347543,59.946324&size=450,450&z=16&l=map&pt=30.347543,59.946324,pmwtm1"
+              alt="">
+
             <div class="service__addresses-city">
               Москва
             </div>
@@ -566,7 +571,9 @@
           </div>
           <div class="service__addresses-item">
             <!-- <div class="service__addresses-map" id="map3"></div> -->
-            <img data-coords="30.347543,59.946324" data-id="3" src="https://static-maps.yandex.ru/1.x/?ll=30.347543,59.946324&size=450,450&z=16&l=map&pt=30.347543,59.946324,pmwtm1" alt="">
+            <img data-coords="30.347543,59.946324" data-id="3"
+              src="https://static-maps.yandex.ru/1.x/?ll=30.347543,59.946324&size=450,450&z=16&l=map&pt=30.347543,59.946324,pmwtm1"
+              alt="">
             <div class="service__addresses-city">
               Екатеринбург
             </div>
@@ -621,11 +628,62 @@
       </div>
     </section>
   </div>
+  <!-- footer -->
   <footer class="footer">
-    ICG Group 2019
+    <div class="flex-container">
+      <div class="icg-copy">
+        ICG GROUP
+      </div>
+      <div class="flex-row">
+        <div class="flex-col">
+          <div class="footer__menu menu--main">
+            <strong>Меню</strong>
+            <ul>
+              <li><a href="">о компании</a></li>
+              <li><a href="">учебный центр icg</a></li>
+              <li><a href="">icg мебель</a></li>
+              <li><a href="">новости</a></li>
+              <li><a href="">акции</a></li>
+              <li><a href="">сервис</a></li>
+              <li><a href="">написать нам</a></li>
+              <li><a href="">в магазин icg</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex-col flex--double">
+          <div class="footer__menu menu--brands">
+            <strong>Бренды</strong>
+            <ul>
+              <li><a href="">IONTO Comed</a></li>
+              <li><a href="">Suda</a></li>
+              <li><a href="">Creativellooda</a></li>
+              <li><a href="">MyStyle</a></li>
+              <li><a href="">Bernand Cassiere</a></li>
+              <li><a href="">Profillers</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex-col">
+          <div class="footer__menu menu--social">
+            <strong>icg в&nbsp;социальных&nbsp;сетях</strong>
+            <ul class="header__social-list">
+              <li class="header__social header__social--vk">
+                <a href="#"></a>
+              </li>
+              <li class="header__social header__social--fb">
+                <a href="#"></a>
+              </li>
+              <li class="header__social header__social--inst">
+                <a href="#"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
   <script src="https://api-maps.yandex.ru/2.1.74/?apikey=ac18c3d7-cdb5-4fce-a82f-ff6391ca77e5&lang=ru_RU"
-  type="text/javascript"></script>
+    type="text/javascript"></script>
   <script src="js/main.js"></script>
 </body>
 
